# uav-java-node-architecture

./: .gitignore  Modelfile  README.md
.github/workflows/: ci.yml
backend-ai/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend-ai/app/: __init__.py  chat_history.py  config.py  errors.py  knowledge_base.py  main.py  model_calls.py  observability.py  schemas.py
backend-ai/tests/: test_knowledge_base.py  test_model_calls.py  test_observability.py  test_streaming.py
backend-java/: Dockerfile  pom.xml
backend-node/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
backend-node/src/: app.module.ts  main.ts
backend-node/src/admin/: admin.controller.ts
backend-node/src/alarm/: alarm.controller.ts
backend-node/src/auth/: http-auth.decorators.ts  http-auth.types.ts  http-jwt-auth.guard.ts  http-roles.guard.ts  keycloak-jwt.service.ts
backend-node/test/: keycloak-jwt.service.test.js
deploy/: .env.example  docker-compose.yml
deploy/keycloak/: uav-realm.json
docs/: architecture.md  gateway.md  knowledge-base.md  security-audit-admin.md  temporal-integration.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  LICENSE  README.md  nginx.conf  nginx.https.conf.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  i18n.js  main.ts  vite-env.d.ts
gateway-java/: Dockerfile  pom.xml
scripts/: start.sh  uav.sh
scripts/ci/: ollama-mock.py  verify-stack.sh  wait-for-http.sh
scripts/keycloak/: sync-test-users.sh  verify-rbac.sh
(+157 files in other folders)
