[project]
name = "uav-backend-ai"
version = "0.1.0"
description = "UAV local AI service powered by LangChain and Ollama"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "langchain-ollama>=1,<2",
    "pydantic-settings>=2.10,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
